<resources>
    <string name="app_name">Quiz App</string>
    <string name="Name">Name</string>
    <string name="Instruction">Please answer the questions below.</string>
    <string name="Question1">1. What is the longest river in Africa?</string>
    <string name="CongoRiver">Congo River</string>
    <string name="NigerRiver">Niger River</string>
    <string name="RiverNile">River Nile</string>
    <string name="Question2">2. Who became a President after 27 years in prison during apartheid?</string>
    <string name="Input">type your answer here</string>
    <string name="Question3">3. Name two former African presidents?</string>
    <string name="KwameNkrumah">Kwame Nkrumah</string>
    <string name="ChinuaAchibe">Chinua Achibe</string>
    <string name="NelsonMandela">Nelson Mandela</string>
    <string name="Question4">4. Which country produces the most cocoa in the world?</string>
    <string name="IvoryCoast">Ivory Coast</string>
    <string name="Ghana">Ghana</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Question5">5. Which country has the highest population in Africa?</string>
    <string name="Type">type your answer here</string>
    <string name="Question6">6. Which two countries played in the 2010 FIFA World Cup final?</string>
    <string name="Spain">Spain</string>
    <string name="Germany">Germany</string>
    <string name="Netherlands">Netherlands</string>
    <string name="Question7">7. Who is the richest Black person in the world?</string>
    <string name="OprahWinfrey">Oprah Winfrey</string>
    <string name="RobertSmith">Robert Smith</string>
    <string name="AlikoDangote">Aliko Dangote</string>
    <string name="Question8">8. Who was the seventh Secretary-General of the UN?</string>
    <string name="Answer">type your answer here</string>
    <string name="Question9">9. Who was the first African player to win the Ballon d'or?</string>
    <string name="AbediPele">Abedi Pele</string>
    <string name="GeorgeWeah">George Weah</string>
    <string name="SamuelEto">Samuel Eto</string>
    <string name="Question10">10. What is the richest city in the continent of Africa?</string>
    <string name="TypeAnswer">type your answer here</string>
    <string name="submit">submit</string>
</resources>
